--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,28 @@
 
 /* Your CSS Code here. */
+#gameContainer {
+  width: 400px;
+  height: 400px;
+  display: grid;
+  grid-template-columns: repeat(40, 10px);
+  grid-template-rows: repeat(40, 10px);
+}
+
+.pixel {
+  width: 10px;
+  height: 10px;
+  border: 1px solid black;
+  box-sizing: border-box;
+}
+
+.food {
+  background-color: red;
+}
+
+.snakeBodyPixel {
+  background-color: green;
+}
+
+.scoreBoard {
+  text-align: center;
+}
