--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,13 @@
-
-/* Your CSS Code here. */
 #gameContainer {
   width: 400px;
   height: 400px;
   display: grid;
-  grid-template-columns: repeat(40, 10px);
-  grid-template-rows: repeat(40, 10px);
+  grid-template-columns: repeat(40, 1fr);
+  grid-template-rows: repeat(40, 1fr);
 }
 
 .pixel {
-  width: 10px;
-  height: 10px;
   border: 1px solid black;
-  box-sizing: border-box;
 }
 
 .food {
@@ -21,8 +16,4 @@
 
 .snakeBodyPixel {
   background-color: green;
-}
-
-.scoreBoard {
-  text-align: center;
 }
